# esolearn

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  NEXT_SESSION.md  README.md
archived/esoc-gpu/: Cargo.toml
archived/esoc-gpu/src/: error.rs  lib.rs
archived/esoc-gpu/src/pass/: point.rs  rule.rs  tess.rs
archived/esoc-gpu/src/shaders/: point.wgsl  tess.wgsl  text.wgsl
crates/esoc-geo/: Cargo.toml
crates/esoc-geo/data/: us_states_20m.geojson.zst
crates/esoc-geo/examples/: geo_demo.rs
crates/esoc-geo/src/: bundled.rs  error.rs  geojson.rs  geometry.rs  lib.rs  properties.rs  simplify.rs  spatial.rs
crates/esoc-geo/src/projection/: albers_usa.rs  equal_earth.rs  equirectangular.rs  mercator.rs  mod.rs  natural_earth.rs
crates/esoc-gfx/: Cargo.toml
crates/esoc-gfx/src/: canvas.rs  color.rs  element.rs  error.rs  geom.rs  layer.rs  lib.rs  palette.rs  path.rs  scene_svg.rs  style.rs  text.rs  transform.rs
crates/esoc-gfx/src/backend/: mod.rs  png.rs  svg.rs
crates/esoc-scene/: Cargo.toml
crates/esoc-scene/src/: arena.rs  bounds.rs  lib.rs  mark.rs  node.rs  scale.rs  style.rs  transform.rs  transition.rs
crates/scry-app/: Cargo.toml  tauri.conf.json
crates/scry-app/capabilities/: default.json
crates/scry-app/frontend/: app.js  index.html  style.css
crates/scry-app/src/: commands.rs  generators.rs  main.rs  ops.rs  state.rs
crates/scry-cv/: Cargo.toml
crates/scry-cv/benches/: convolution.rs  feature_detection.rs  matching.rs
crates/scry-cv/examples/: edge_pipeline.rs  feature_match.rs  stereo_demo.rs
crates/scry-cv/src/: error.rs  integral.rs  lib.rs  math.rs  prelude.rs  rng.rs
crates/scry-cv/src/background/: knn.rs  mod.rs  mog2.rs
crates/scry-cv/src/components/: contour.rs  labeling.rs  mod.rs
crates/scry-cv/src/features/: brief.rs  fast.rs  harris.rs  keypoint.rs  mod.rs  orb.rs
crates/scry-cv/src/filter/: bilateral.rs  box_filter.rs  canny.rs  gaussian.rs  median.rs  mod.rs  sobel.rs
crates/scry-cv/src/flow/: farneback.rs  flow_field.rs  lucas_kanade.rs  mod.rs  poly_expansion.rs
crates/scry-cv/src/hough/: circles.rs  lines.rs  mod.rs
crates/scry-cv/src/image/: buf.rs  convert.rs  mod.rs  pixel.rs  view.rs
crates/scry-cv/src/matching/: brute_force.rs  match_types.rs  mod.rs  ratio_test.rs  template.rs
crates/scry-cv/src/morphology/: basic.rs  mod.rs
crates/scry-cv/src/pyramid/: gaussian.rs  laplacian.rs  mod.rs
crates/scry-cv/src/registration/: fundamental.rs  homography.rs  mod.rs  ransac.rs
crates/scry-cv/src/stereo/: census.rs  cost_volume.rs  mod.rs  sgbm.rs
crates/scry-cv/tests/: pipeline_integration.rs
crates/scry-gpu/: Cargo.toml
crates/scry-gpu/examples/: bench_compute.rs  bench_cuda_compare.rs  bench_kernel.rs  bench_wgpu_compare.rs
crates/scry-gpu/src/: batch.rs  buffer.rs  device.rs  dispatch.rs  error.rs  kernel.rs  lib.rs  shader.rs  shaders.rs  ticket.rs
crates/scry-gpu/src/backend/: cuda.rs  mod.rs  vulkan.rs
crates/scry-gpu/tests/: compute.rs  cuda_compute.rs
crates/scry-learn/: Cargo.toml  README.md
crates/scry-learn/benches/: benchmark_config.rs  competitor_bench.rs  fair_bench.rs  full_model_benchmark.rs  honest_bench.rs
crates/scry-learn/examples/: crosslib_comparison.rs  gpu_tensor_bench.rs  industry_report.rs  universal_bank.rs
crates/scry-learn/src/: calibration.rs  constants.rs  dataset.rs  distance.rs  error.rs  feature_selection.rs  lib.rs  mmap.rs  onnx.rs  sparse.rs  split.rs
crates/scry-learn/src/accel/: mod.rs  scry_gpu.rs
crates/scry-learn/src/cluster/: dbscan.rs  hdbscan.rs  kmeans.rs
crates/scry-learn/src/linear/: logistic.rs  regression.rs
crates/scry-learn/src/metrics/: clustering.rs
crates/scry-learn/src/naive_bayes/: gaussian.rs
crates/scry-learn/src/neighbors/: kdtree.rs  knn.rs
crates/scry-learn/src/neural/: activation.rs  callback.rs  classifier.rs  dropout.rs  layer.rs  mod.rs  network.rs  optimizer.rs  regressor.rs  traits.rs
crates/scry-learn/src/preprocess/: imputer.rs  one_hot.rs  pca.rs  scaler.rs
crates/scry-learn/src/search/: bayes.rs  tunable.rs
crates/scry-learn/src/svm/: linear.rs  mod.rs
crates/scry-learn/src/tree/: binning.rs  gradient_boosting.rs  histogram_gbt.rs
crates/scry-learn/tests/: benchmark_audit.rs  correctness.rs  cv_benchmark.rs  golden_regression_test.rs  integration_pipeline.rs  mathematical_invariants.rs  numerical_stability.rs  optimization_equivalence.rs  parity_diagnostic.rs  stress_edge_cases.rs
crates/scry-llm/: Cargo.toml
crates/scry-llm/benches/: llm_ops.rs
crates/scry-llm/src/: generate.rs  lib.rs  ops.rs  quantize.rs  tokenizer.rs
crates/scry-llm/src/backend/: cpu.rs  cuda.rs  kernels.rs  mod.rs  scry_gpu.rs
crates/scry-llm/src/nn/: kv_cache.rs  llama.rs  mod.rs
crates/scry-llm/tests/: bench_scry_memory.rs  bf16_correctness.rs  cuda_correctness.rs  generate.rs  llama_bench.rs  llama_correctness.rs  llama_cuda.rs  llama_smoke.rs  tokenizer.rs
crates/scry-stt/: Cargo.toml  LEARN.md
crates/scry-stt/examples/: bench_cold_start.rs  debug_encoder.rs  debug_encoder2.rs  transcribe_wav.rs
crates/scry-stt/src/: decode.rs  mel.rs
crates/scry-stt/src/model/: attention.rs  mod.rs
crates/scry-stt/src/tokenizer/: mod.rs
crates/scry-stt/tests/: e2e.rs
crates/scry-vision/: Cargo.toml  SAM_CONTINUATION.md
crates/scry-vision/examples/: bench.rs  classify.rs  embed_clip.rs  inspect_keys.rs  walkthrough.rs
crates/scry-vision/src/: checkpoint.rs  error.rs  image.rs  lib.rs
crates/scry-vision/src/model/: mock.rs  mod.rs  native.rs  onnx.rs
crates/scry-vision/src/models/: arcface.rs  clip.rs  mod.rs  resnet.rs  scrfd.rs  vit.rs  yolo.rs
crates/scry-vision/src/nn/: batchnorm.rs  conv2d.rs  conv_transpose2d.rs  layernorm2d.rs  mod.rs  patch_embed.rs  pool.rs
crates/scry-vision/src/pipeline/: mod.rs
crates/scry-vision/src/postprocess/: boxes.rs  classify.rs  embedding.rs  mod.rs  nms.rs
crates/scry-vision/src/transform/: affine.rs  color.rs  crop.rs  (+5 more)
crates/scry-vision/tests/: face_pipeline.rs
examples/chart_audit/: .gitignore  Cargo.toml
examples/chart_audit/src/: main.rs
(+166 files in other folders)
