[workspace]
resolver = "2"
members = ["crates/*", "examples/chart_audit"]
exclude = ["crates/scry-app", "crates/scry-stt"]

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
authors = ["esoc"]
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
many_single_char_names = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
