[package]
name = "esoc-gpu"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "wgpu GPU rendering backend for esoc-scene — instanced mark rendering, SDF AA, MSDF text"
license.workspace = true

[dependencies]
esoc-scene = { path = "../esoc-scene" }
esoc-color = { path = "../esoc-color" }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
lyon = "1"
pollster = "0.4"
log = "0.4"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
many_single_char_names = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_closure_for_method_calls = "allow"
