[package]
name = "esoc-geo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Geographic types, map projections, and spatial utilities"
license.workspace = true

[features]
default = []
geojson = ["dep:serde", "dep:serde_json"]
bundled = ["geojson", "dep:zstd"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
esoc-color = { path = "../esoc-color" }
esoc-scene = { path = "../esoc-scene" }
esoc-gfx = { path = "../esoc-gfx" }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
many_single_char_names = "allow"
option_if_let_else = "allow"
