[package]
name = "esoc-scene"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Arena scene graph with typed visual marks — shared IR between chart logic and rendering backends"
license.workspace = true

[dependencies]
esoc-color = { path = "../esoc-color" }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
many_single_char_names = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_closure_for_method_calls = "allow"
