[package]
name = "scry-app"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Tauri desktop workbench for scry-cv computer vision"
license = "MIT OR Apache-2.0"

[dependencies]
scry-cv = { path = "../scry-cv" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "scry-app"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
many_single_char_names = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
