[package]
name = "chart-audit"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
esoc-chart = { path = "../../crates/esoc-chart", features = ["png"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
